[project]
name = "langtrader"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0.0"
dependencies = [
    "langgraph (>=1.1.6,<2.0.0)",
    "langchain-openai (>=1.1.13,<2.0.0)"
]

[tool.poetry]
packages = [{include = "langtrader", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
extraPaths = ["."]
