[project]
name = "langtrader"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "langgraph (>=1.1.6,<2.0.0)",
    "langchain-openai (>=1.1.13,<2.0.0)",
    "websockets (>=16.0,<17.0)",
    "transformers (>=5.5.4,<6.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "alpaca-py (>=0.43.2,<0.44.0)",
    "pytz (>=2026.1.post1,<2027.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "langtrader", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
extraPaths = ["."]
